Fixed overflow issues.

--- a/projects/static/projects/style.css
+++ b/projects/static/projects/style.css
@@ -344,7 +344,7 @@ li.sort:hover {
     color: #CCC !important;
     border-radius: 10px 10px 10px 0;
     width: 24%;
-    margin: 0.5%;
+    margin: 0.4%;
     //padding: 15px;
     text-align: left;
     margin-bottom: 2%;
